Fix footer issue spilling over into other content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,13 +96,13 @@ p {
 
 .about-me {
     width: 100vw;
-    height: 90vh;
+    height: 100vh;
     background-color: #042434;
 }
 
 .about-me-image {
-    min-height: 25vh;
-    min-width: 30vw;
+    min-height: 300px;
+    min-width: 300px;
     border: 3px black solid;
     background-color: rgb(107, 75, 28);
     margin: 30px 0;
@@ -120,13 +120,17 @@ p {
 
 #about-me-cta {
     background-color: #dca537;
-    min-height: 6vh;
-    min-width: 20vw;
+    min-height: 60px;
+    min-width: 120px;
 }
 
 .about-me>h1 {
     margin-top: 20px;
     margin-left: 20px;
+}
+
+#about-me-text {
+    font-size: 0.9rem;
 }
 
 /* Form */
@@ -178,6 +182,7 @@ p {
 
 .footer-container {
     background-color: #042434;
+    margin-top: 100px;
 }
 
 .icons {
